# MiningSpeedChecker

./: CMakeLists.txt  LICENSE  README.md
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
