CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)
SET(CMAKE_CXX_STANDARD 11)
PROJECT(MiningSpeedChecker)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
SET(FLTK_SKIP_FLUID true)
SET(RAPIDJSON_USE_SSE42 true)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(FLTK REQUIRED)
FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(rapidjson REQUIRED)

INCLUDE_DIRECTORIES(${FLTK_INCLUDED_DIR})
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(include)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RAPIDJSON_CXX_FLAGS}")

ADD_EXECUTABLE(MiningSpeedChecker src/mainwindow.cpp src/main.cpp)
TARGET_LINK_LIBRARIES(MiningSpeedChecker ${FLTK_LIBRARIES} ${OPENGL_LIBRARIES} ${CURL_LIBRARIES})
